<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="CookBook 설정">

        <EditTextPreference
            app:key="theme"
            app:title="CookBook"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/my_color"
            app:entryValues="@array/my_color_values"
            app:key="color"
            app:title="테마 색상 설정"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>